WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127939
Begin fleshing out the navigation delegate
https://bugs.webkit.org/show_bug.cgi?id=127939
Summary
Begin fleshing out the navigation delegate
Anders Carlsson
Reported
2014-01-30 12:57:03 PST
Begin fleshing out the navigation delegate
Attachments
Patch
(14.94 KB, patch)
2014-01-30 13:02 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2014-01-30 13:02:17 PST
Created
attachment 222718
[details]
Patch
WebKit Commit Bot
Comment 2
2014-01-30 13:03:42 PST
Attachment 222718
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/Cocoa/NavigationState.h:64: The parameter type should use PassRefPtr instead of RefPtr. [readability/pass_ptr] [5] ERROR: Source/WebKit2/UIProcess/API/APIPolicyClient.h:54: The parameter type should use PassRefPtr instead of RefPtr. [readability/pass_ptr] [5] Total errors found: 2 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3
2014-01-30 13:14:22 PST
Comment on
attachment 222718
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=222718&action=review
> Source/WebKit2/UIProcess/Cocoa/NavigationState.h:73 > + WKWebView* m_webView;
Star on the wrong side.
> Source/WebKit2/UIProcess/Cocoa/NavigationState.mm:110 > + case WKNavigationPolicyDecisionAllow: > + listener->use(); > + break; > + > + case WKNavigationPolicyDecisionCancel: > + listener->ignore(); > + break; > + > + case WKNavigationPolicyDecisionDownload: > + listener->download();
This is over-indented.
mitz
Comment 4
2014-01-30 13:16:13 PST
Also, this looks like it breaks the tests.
Anders Carlsson
Comment 5
2014-01-30 13:23:30 PST
Committed
r163108
: <
http://trac.webkit.org/changeset/163108
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug